# readoc

./: .gitignore  CLAUDE.md  README.md  hk.pkl  mise.toml  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
scripts/: run-jscpd.sh
skills/office-documents/: SKILL.md
skills/reading-documents/: SKILL.md
tests/: conftest.py  requirements-dev.txt  test_editdoc.py  test_exec_bits.py  test_readir.py  test_readlib.py  test_readoc.py
