# Dev-tooling manifest only. The readoc/readir CLIs themselves stay self-contained
# (PEP 723 inline deps, run via `uv run --script`); this file exists purely so
# contributors get a reproducible test/lint environment — it declares no runtime
# dependencies and is never built or installed (package = false).
[project]
name = "readoc"
version = "1.0.0"
description = "Read Office documents (.docx, .xlsx, .pdf) and folders of mixed documents as plain text."
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "python-docx",
    "openpyxl",
    "pymupdf",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py39"
# The CLIs live in bin/ without a .py extension, so ruff won't discover them by
# directory traversal unless we include them explicitly.
extend-include = ["bin/readoc", "bin/readir", "bin/editdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
