# Dev-tooling manifest only. The readoc/readir CLIs themselves stay self-contained
# (PEP 723 inline deps, run via `uv run --script`); this file exists purely so
# contributors get a reproducible test/lint environment — it declares no runtime
# dependencies and is never built or installed (package = false).
[project]
name = "readoc"
version = "1.0.0"
description = "Read Office documents (.docx, .xlsx, .pdf) and folders of mixed documents as plain text."
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "python-docx",
    "openpyxl",
    "pymupdf",
    "ruff",
    "vulture",
]

[tool.uv]
package = false
# Supply-chain cooldown: don't resolve dependency versions published in the last
# 4 days, so a malicious release is given time to be caught/yanked before we pull it.
# Rolling duration so the window moves with the current date. (dev-env standard v6+.)
exclude-newer = "4 days"

[tool.ruff]
target-version = "py39"
# The CLIs live in bin/ without a .py extension, so ruff won't discover them by
# directory traversal unless we include them explicitly.
extend-include = ["bin/readoc", "bin/readir", "bin/editdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
